# ayase_old

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  notes
ayase/: Cargo.toml  ayase.toml
ayase/src/: api.rs  config.rs  constructs.rs  db.rs  error.rs  main.rs  main_.rs  shared.rs
ayase/src/db/: mod.rs  shared.rs
ayase/src/layout/: mod.rs
ayase/src/layout/db/: asagi.rs  mod.rs
ayase/src/layout/site/: mod.rs
ayase/src/site/: eightchan.rs  fourchan.rs  mod.rs  shared.rs
ayase_asagi/: Cargo.toml
ayase_chan/: Cargo.toml
ayase_chan/src/: constructs.rs  lib.rs
ayase_config/: Cargo.toml
ayase_config/src/: asagi.rs  error.rs  main.rs
ayase_config/src/test/: asagi.rs  ayase.rs  mod.rs  utils.rs
ayase_config/test/asagi/: bibanon.json
ayase_core/: Cargo.toml
ayase_core/src/: lib.rs  placeholders.rs
ayase_core/src/managers/: construct.rs  mod.rs  shared.rs  source.rs
ayase_eightchan/: Cargo.toml
ayase_fourchan/: Cargo.toml
ayase_json/: Cargo.toml
ayase_json/src/: lib.rs
ayase_mysql/: Cargo.toml
ayase_mysql/src/: config.rs  format.rs  lib.rs  store.rs
ayase_postgresql/: Cargo.toml
ayase_postgresql/src/: format.rs  lib.rs  store.rs
shamrock/: Cargo.toml
shamrock/src/: lib.rs  managers.rs  placeholders.rs  traits.rs
